# ForexSessionRadar

./: .gitignore  LICENSE  README.md  apiKey.example.md  docker-compose.coolify.yml  install-windows-service.bat  package-lock.json  package.json
backend/: .env.example  package.json
backend/backend/data/: store.json
backend/scripts/: build-sidecar.mjs  prepare-build.mjs  validate-timezones.mjs
backend/src/: server.js
backend/src/db/: store.js
backend/src/routes/: assistantRoutes.js  dashboardRoutes.js  emailConfigRoutes.js  plannerRoutes.js  preferencesRoutes.js  timelineSnapshotRoutes.js
backend/src/scheduler/: alertScheduler.js
backend/src/services/: assistantService.js  emailConfigService.js  emailService.js  emailTemplateService.js  marketTimeService.js  marketTimeService.test.js  openaiService.js  openaiService_BKP.js  radarService.js  sessionService.emailAlarms.test.js  sessionService.js  timelineSnapshotService.js
backend/src/types/: constants.js
backend/src/utils/: loadEnvironment.js  locale.js  parseArgs.js
data/: store.json
frontend/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIChatAssistant.tsx  AlertCard.tsx  AppErrorBoundary.tsx  AssetRadar.tsx  CurrentSessionCard.tsx  EmailConfigModal.tsx  FloatingChatAssistant.tsx  FloatingChatButton.tsx  FloatingChatWindow.tsx  (+4 more)
scripts/: smoke-email-alerts.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+36 files in other folders)
